# credman

./: .gitignore  LICENSE  README.md  creds.db  pyproject.toml  requirements.txt  setup.py.tmp
credman.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  credman.py  passman.py  storage.py
src/credman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: passman_tests.py
