[build-system]
requires = ["setuptools>=61.0",
    "aiohttp>=3.8.3",
    "aiosignal>=1.3.1",
    "async-timeout>=4.0.2",
    "attrs>=22.1.0",
    "black>=22.10.0",
    "cffi>=1.15.1",
    "charset-normalizer>=2.1.1",
    "click>=8.1.3",
    "cryptography>=38.0.4",
    "frozenlist>=1.3.3",
    "idna>=3.4",
    "importlib-metadata>=5.1.0",
    "jaraco.classes>=3.2.3",
    "keyring>=23.11.0",
    "mock>=4.0.3",
    "mockito>=1.4.0",
    "more-itertools>=9.0.0",
    "multidict>=6.0.2",
    "mypy-extensions>=0.4.3",
    "pathspec>=0.10.2",
    "pip>=22.3",
    "platformdirs>=2.5.4",
    "pycparser>=2.21",
    "setuptools>=65.5.0",
    "tomli>=2.0.1",
    "wheel>=0.37.1",
    "yarl>=1.8.1",
    "zipp>=3.11.0"]

build-backend = "setuptools.build_meta"

[project]
name = "credman"
version = "0.0.2"
authors = [
    { name = "Stephen Booth", email = "stephen.booth.za@gmail.com" },
]
description = "A credential manager"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sboothza/credman"
"Bug Tracker" = "https://github.com/sboothza/credman/issues"

[project.scripts]
credman = "credman:main"